feat: ai 기능 추가
여행 플랜 정보 평가해주도록 spring ai 사용